# OdooPrintPlanner

./: .replit  COMBINATION_ANALYSIS_SUMMARY.md  README.md  generate_combinations_report.py  odoo.conf  pyproject.toml  replit.md
attached_assets/: Pasted-RPC-ERROR-Odoo-Server-Error-Traceback-most-recent-call-last-File-home-odoo-src-odoo-odoo-http-1758810286059_1758810286059.txt
custom_addons/transfer_ganging/: __manifest__.py
custom_addons/transfer_ganging/data/: server_actions.xml
custom_addons/transfer_ganging/models/: __init__.py  combination_analyzer.py  combination_report_wizard.py  ganging_engine.py  project_project.py  project_task.py
custom_addons/transfer_ganging/security/: ir.model.access.csv
custom_addons/transfer_ganging/views/: combination_report_wizard_views.xml  project_project_views.xml  project_task_views.xml
