[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "chardet>=5.2.0",
    "decorator>=5.2.1",
    "docutils>=0.22",
    "lxml>=6.0.1",
    "num2words>=0.5.14",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "qrcode>=8.2",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    "xlwt>=1.3.0",
    "zeep>=4.3.1",
]
