[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "chardet>=5.2.0",
    "decorator>=5.2.1",
    "docutils>=0.22",
    "libsass>=0.23.0",
    "lxml-html-clean>=0.4.2",
    "lxml>=6.0.1",
    "num2words>=0.5.14",
    "ofxparse>=0.21",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "polib>=1.2.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-stdnum>=2.1",
    "qrcode>=8.2",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "vobject>=0.9.9",
    "werkzeug==2.0.2",
    "wheel>=0.45.1",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    "xlwt>=1.3.0",
    "zeep>=4.3.1",
    "psutil>=7.0.0",
    "python-ldap>=3.4.4",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "greenlet>=3.2.4",
    "gevent>=25.8.2",
]
